# controllers/user/userController.go
@@ -103,3 +103,40 @@ func (user UserController) AddUser(c *gin.Context) {
 		"data":    "",
 	})
 }
+
+// UserInfo
+// @Tags 用户相关方法
+// @Summary 获取用户信息
+// @Description /user/userinfo
+// @Accept json
+// @Produce json
+// @Success 200 {string} json "{"code":"200", "message":"", "data":""}"
+// @Router /user/userinfo [post]
+func (user UserController) UserInfo(c *gin.Context) {
+	users, userError := helper.AnalysisTokenGetUserInfo(c)
+	if userError != nil {
+		fmt.Println("userError", userError)
+		c.JSON(http.StatusOK, gin.H{
+			"code":    "200",
+			"message": "用户token异常",
+		})
+		return
+	}
+	email := users.Email
+	var userinfo models.UserField
+	userFindErr := models.DB.Model(&models.User{}).Where("is_delete = ?", 0).Where("email = ?", email).First(&userinfo).Error
+	if userFindErr != nil {
+		fmt.Println("userFindErr", userFindErr)
+		c.JSON(http.StatusOK, gin.H{
+			"code":    "-1",
+			"message": "userFindErr",
+		})
+		return
+	}
+	c.JSON(http.StatusOK, gin.H{
+		"code":    "200",
+		"message": "success",
+		"data":    userinfo,
+	})
+	return
+}
